# mitre-attack-mcp

./: .env.example  CONFIGURATION_GUIDE.md  DATA_DIRECTORY_UPDATE.md  DOCKER_COMPOSE_SCRIPTS.md  DOCUMENTATION_UPDATE.md  Dockerfile  Dockerfile.ssl  HTTP_DEPLOYMENT.md  MCP_CLIENT_CONFIGURATION.md  PRD-callback.txt  README.md  SSL_SETUP.md  STARTUP_SCRIPTS.md  akira_babuk_techniques_layer.json  compression_benchmark.py  docker-compose.ssl.yml  docker-compose.yml  docker_compose.sh  docker_compose_ssl.sh  final_results_table.py  generate_ssl_cert.sh  hd_app_ssl_private_key.pem  hd_app_ssl_server.csr  hd_app_ssl_server.pem  http_server.py  medusa_ttps_layer.json  mitre-crew-compressed.py  mitre-crew-embedding.py  mitre-crew.py  poetry.lock-old  pyproject.toml  pyproject.toml-old  realistic_llm_test.py  requirements.txt  self-signed-ssl.sh  start_http.sh  start_http_standalone.sh  start_https.sh  start_https_standalone.sh  start_server.sh  (+1 more)
analysis_outputs/: 20251020_222126_malware_analysis_IcedID_-_Banking_trojan_used_as_initial_access_vec.md  20251020_224109_threat_actor_profiling_APT28_Fancy_Bear_-_Russian_military_intelligence_t.md  20251020_225640_threat_actor_profiling_Wizard_Spider_-_Russian_cybercriminal_group_behind.md  20251020_232842_comparative_analysis_Compare_SolarWinds_vs_Kaseya_-_Supply_chain_attack.md  20251021_072842_comparative_analysis_Compare_Maze_vs_REvil_-_Ransomware-as-a-service_op.md  20251021_083356_threat_actor_profiling_Maze_Ransomware_Group_-_Financially_motivated_rans.md  20251021_112230_threat_actor_profiling_Carbanak_-_Financially_motivated_group_targeting_b.md  20251021_113935_threat_actor_profiling_Wizard_Spider_-_Russian_cybercriminal_group_behind.md  20251021_135514_navigator_layer_generation_Generate_technology_sector_layer_-_Supply_chain_an.md  20251021_140947_navigator_layer_generation_Create_retail_sector_threat_layer_-_POS_malware_an.md  20251021_150830_comparative_analysis_Analyze_government_vs_critical_infrastructure_-_St.md  20251022_115044_malware_analysis_Mimikatz_-_Credential_dumping_tool_used_for_latera.md
examples/: claude_desktop_config.json  cursor_mcp_config.json  docker-compose.production.yml  kubernetes-deployment.yaml  local_config.py  nginx.conf  remote_config.py
src/mitre_attack_mcp/: server.py
ssl/: hd_app_ssl_server.crt  hd_app_ssl_server.key
test_fix/: 20251020_222634_malware_analysis_IcedID_-_Banking_trojan_used_as_initial_access_vec.md
test_intelligent/: 20251020_223216_malware_analysis_IcedID_-_Banking_trojan_used_as_initial_access_vec.md
test_table_format/: 20251020_224933_malware_analysis_IcedID_-_Banking_trojan_used_as_initial_access_vec.md
